Playing, test visualisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -DHAVE_STRUCT_TIMESPEC -v")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -DHAVE_STRUCT_TIMESPEC")
 set(PROJECT_NAME sound-visualizer)
 set(INSTALL_PATH ./out)
 set(SFML_ROOT D:/Code/Libs/SFML-2.3.2)
@@ -25,17 +25,19 @@ else ()
 endif ()
 
 find_library(FREEGLUT_LIB libfreeglut ${FREEGLUT_DIRECTORY}/lib)
+find_library(FREEGLUT_DLL freeglut)
 include_directories(${FREEGLUT_DIRECTORY}/include)
 target_link_libraries(${PROJECT_NAME} ${FREEGLUT_LIB})
+target_link_libraries(${PROJECT_NAME} ${FREEGLUT_DLL})
 
-find_library(GLEW_LIB glew32 ${GLEW_DIRECTORY}/lib/Release/Win32)
-find_library(GLEW_DLL glew32 ${GLEW_DIRECTORY}/bin/Release/Win32)
+find_library(GLEW_LIB glew32.lib ${GLEW_DIRECTORY}/lib/Release/Win32)
+find_library(GLEW_DLL glew32.dll)
 include_directories(${GLEW_DIRECTORY}/include)
 target_link_libraries(${PROJECT_NAME} ${GLEW_LIB})
 target_link_libraries(${PROJECT_NAME} ${GLEW_DLL})
 
 find_library(FMODEX_LIB libfmod.a ${FMODEX_DIRECTORY}/lib)
-find_library(FMODEX_DLL fmod.dll ${FMODEX_DIRECTORY}/lib)
+find_library(FMODEX_DLL fmod.dll)
 include_directories(${FMODEX_DIRECTORY}/inc)
 target_link_libraries(${PROJECT_NAME} ${FMODEX_LIB})
 target_link_libraries(${PROJECT_NAME} ${FMODEX_DLL})
