--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,6 @@ project(${PROJECT_NAME})
 aux_source_directory(./src/ SOURCE_FILES)
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
-#[[If you havn't integrated SFML plese use find SFML library method from older commits, eg: 2333909 ]]
+#[[If you haven't integrated SFML please use SFML finding method from older commits]]
 target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-audio sfml-window sfml-system)
 target_link_libraries(${PROJECT_NAME} opengl32 glu32 pthread glew32)
